Update profile and master layout Update readme Fix footer height causing horizontal scrollbar

--- a/public/packages/less/site.less
+++ b/public/packages/less/site.less
@@ -15,7 +15,7 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
+  height: 61px;
   background-color: #f5f5f5;
 }
 
@@ -50,6 +50,7 @@ body > .container {
   padding: 11px 15px;
   font-size: 13px;
   line-height:16px;
+  height: 40px;
 }
 
 /* header nav of user */
